--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  output:
+    ansi:
+      enabled: always
+
   jpa:
     hibernate:
       ddl-auto: update
