--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,12 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/starbucks_database
     username: root
-    password: zxcv4312
+    password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  output:
+    ansi:
+      enabled: always
 
   jpa:
     hibernate:
