--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/starbucks_database
     username: root
-    password: 1234
+    password: zxcv4312
     driver-class-name: com.mysql.cj.jdbc.Driver
-
-  output:
-    ansi:
-      enabled: always
 
   jpa:
     hibernate:
